--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "react-checkpoint",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
+  "scripts": {
+    "start": "webpack-dev-server --progress --colors --inline --hot"
+  },
   "author": "jonathankamau <jonathan.kamau@andela.com>",
   "license": "MIT",
   "dependencies": {
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^4.8.0",
     "flux": "^3.1.3",
+    "html-webpack-plugin": "^2.30.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4",
     "yarn": "^1.2.0"
   }
 }
