--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors --inline --hot"
+    "start": "webpack-dev-server --progress --colors --inline --hot",
+    "test": "jest --coverage"
   },
   "author": "jonathankamau <jonathan.kamau@andela.com>",
   "license": "MIT",
@@ -11,12 +12,15 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.1.1",
     "eslint": "^4.8.0",
     "flux": "^3.1.3",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
