--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-preset-env": "^1.6.1",
+    "fetch-mock": "^5.13.1",
     "jest": "^21.2.1",
+    "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-mock-store": "^1.3.0",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --coverage",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "proxy":"https://newsapi.org/v1"
