--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-preset-env": "^1.6.1",
+    "eslint": "^4.12.1",
+    "eslint-plugin-react": "^7.5.1",
     "fetch-mock": "^5.13.1",
     "jest": "^21.2.1",
     "prop-types": "^15.6.0",
@@ -28,5 +30,5 @@
     "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
-  "proxy":"https://newsapi.org/v1"
+  "proxy": "https://newsapi.org/v2"
 }
